# sagemaker-custom-training-template

./: Dockerfile  README.md  config.yaml  main.py  pyproject.toml
trainer/: pyproject.toml  requirements.txt  train.py
